1.2.10pre2:
	- fix network monitor crash with "pl" locale (Pawel Warowny)
	- simplified tray icon option in window menu 
	- Finnish translation update (Taisto Kuikka (taistok))

1.2.10pre1: 2003-06-29
	- icewm background handling moved to icewmbg program
	- fixes to gnome2 menu support (Nehal Mistry)
	- fixes to task bar auto hide
	- fix some focusing problems with gtk2 (Owen Taylor, Bernhard Walle)
	- code cleanups in font handling
	- configuration file handling cleanup
        	
1.2.9: 2003-06-22
 	- added gnome2 menu support (Nehal Mistry)
	- added missing netwm active window notification
	- new option FocusRequestFlashTime
	- fix problem with accented characters in the title bar
	- fix aspect ratio on maximization
	- fix gcc 3.3 build
	- fix crash with a single workspace (oops!)
	- Polish translation update (Arkadiusz Lipiec)
	- documentation of using WINDOW_ROLE property in 
          winoptions (Jo Valentine-Cooper)

1.2.8: 2003-06-08
	- various build/minor fixes
	- new option enableAddressBar(=1)

1.2.8pre3: 2003-06-03
	- fix Alt+Tab window getting stuck under load
	- menu mnemonics tweaks (Hanspeter Roth)
	- add mnemonics to zh_TW.Big5.po (Benshark Chen)
	- task bar layout tweaks
	- Restrictions on command line argument parsing. 
          Only -o, -o ARG or --option, --option=ARG forms
          are accepted now, not any other combinations
        - improvements for NETWM system tray (you must run 'icewmtray'
          in background to support this)

1.2.8pre2: 2003-05-18
	- improved focus handling (alt+tab, window close, workspace switch)
	- fix taskbar issues from pre1
 	- GNOME 2 workspace switcher applet (Adam James Fitzpatrick)
	- renamed --with-gnome-menus to --enable-menus-gnome1
	- cleanups in configurable keyboard bindings handling
	- renamed modMetaIsCtrlAlt to modSuperIsCtrlAlt. Win95keys now 
          enabled by default.

1.2.8pre1: 2003-05-04
	- fix: interaction between shaped windows and fullscreen (Owen Marshall)